crates/swc_ecma_parser/tests/test262-error-references/fail/2dddc87017946cca.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/2dddc87017946cca.js:1:1
  |
1 | import foo
  | ^^^^^^

